--- a/src/main/resources/assets/mubble/lang/nl_nl.json
+++ b/src/main/resources/assets/mubble/lang/nl_nl.json
@@ -10,8 +10,8 @@
 	"block.mubble.jungle_vertical_slab": "Oerwoudhouten plaat verticaal",
 	"block.mubble.acacia_vertical_slab": "Acaciahouten plaat verticaal",
 	"block.mubble.dark_oak_vertical_slab": "Donkereikenhouten plaat verticaal",
-	"//block.mubble.crimson_vertical_slab": "Crimson Vertical Slab",
-	"//block.mubble.warped_vertical_slab": "Warped Vertical Slab",
+	"block.mubble.crimson_vertical_slab": "Helrode houten plaat verticaal",
+	"block.mubble.warped_vertical_slab": "Spookachtige houten plaat verticaal",
 	"block.mubble.stone_vertical_slab": "Stenen plaat verticaal",
 	"block.mubble.smooth_stone_vertical_slab": "Gladde stenen plaat verticaal",
 	"block.mubble.cobblestone_vertical_slab": "kiezelstenen plaat verticaal",
@@ -40,9 +40,9 @@
 	"block.mubble.prismarine_vertical_slab": "Prismarienplaat verticaal",
 	"block.mubble.prismarine_brick_vertical_slab": "Prismarienblokstenenplaat verticaal",
 	"block.mubble.dark_prismarine_vertical_slab": "Donkerprismarienplaat verticaal",
-	"//block.mubble.blackstone_vertical_slab": "Blackstone Vertical Slab",
-	"//block.mubble.polished_blackstone_brick_vertical_slab": "Polished Blackstone Brick Vertical Slab",
-	"//block.mubble.polished_blackstone_vertical_slab": "Polished Blackstone Vertical Slab",
+	"block.mubble.blackstone_vertical_slab": "Zwartstenen plaat verticaal",
+	"block.mubble.polished_blackstone_brick_vertical_slab": "Gepolijste zwartstenen blokstenen plaat verticaal",
+	"block.mubble.polished_blackstone_vertical_slab": "Gepolijste zwartstenen plaat verticaal",
 
 	"block.mubble.dark_prismarine_wall": "Donkereprismarienmuur",
 
@@ -52,8 +52,8 @@
 	"block.mubble.jungle_wood_stairs": "Oerwoudhouten trap",
 	"block.mubble.acacia_wood_stairs": "Acaciahouten trap",
 	"block.mubble.dark_oak_wood_stairs": "Donkereikenhouten trap",
-	"//block.mubble.crimson_hyphae_stairs": "Crimson Hyphae Stairs",
-	"//block.mubble.warped_hyphae_stairs": "Warped Hyphae Stairs",
+	"block.mubble.crimson_hyphae_stairs": "Helrode schimmeldraden trap",
+	"block.mubble.warped_hyphae_stairs": "Spookachtige schimmeldraden trap",
 
 	"block.mubble.oak_wood_slab": "Eikenhouten plaat",
 	"block.mubble.spruce_wood_slab": "Sparrehouten plaat",
@@ -61,8 +61,8 @@
 	"block.mubble.jungle_wood_slab": "Oerwoudhouten plaat",
 	"block.mubble.acacia_wood_slab": "Acaciahouten plaat",
 	"block.mubble.dark_oak_wood_slab": "Donkereikenhouten plaat",
-	"//block.mubble.crimson_hyphae_slab": "Crimson Hyphae Slab",
-	"//block.mubble.warped_hyphae_slab": "Warped Hyphae Slab",
+	"block.mubble.crimson_hyphae_slab": "Helrode schimmeldraden plaat",
+	"block.mubble.warped_hyphae_slab": "Spookachtige schimmeldraden plaat",
 
 	"block.mubble.oak_wood_vertical_slab": "Eikenhouten plaat verticaal",
 	"block.mubble.spruce_wood_vertical_slab": "Sparrehouten plaat verticaal",
@@ -70,8 +70,8 @@
 	"block.mubble.jungle_wood_vertical_slab": "Oerwoudhouten plaat verticaal",
 	"block.mubble.acacia_wood_vertical_slab": "Acaciahouten plaat verticaal",
 	"block.mubble.dark_oak_wood_vertical_slab": "Donkereikenhouten plaat verticaal",
-	"//block.mubble.crimson_hyphae_vertical_slab": "Crimson Hyphae Vertical Slab",
-	"//block.mubble.warped_hyphae_vertical_slab": "Warped Hyphae Vertical Slab",
+	"block.mubble.crimson_hyphae_vertical_slab": "Helrode schimmeldraden plaat verticaal",
+	"block.mubble.warped_hyphae_vertical_slab": "Spookachtige schimmeldraden plaat verticaal",
 
 	"block.mubble.oak_wood_button": "Eikenhouten knop",
 	"block.mubble.spruce_wood_button": "Sparrehouten knop",
@@ -79,8 +79,8 @@
 	"block.mubble.jungle_wood_button": "Oerwoudhouten knop",
 	"block.mubble.acacia_wood_button": "Acaciahouten knop",
 	"block.mubble.dark_oak_wood_button": "Donkereikenhouten knop",
-	"//block.mubble.crimson_hyphae_button": "Crimson Hyphae Button",
-	"//block.mubble.warped_hyphae_button": "Warped Hyphae Button",
+	"block.mubble.crimson_hyphae_button": "Helrode schimmeldraden knop",
+	"block.mubble.warped_hyphae_button": "Spookachtige schimmeldraden knop",
 
 	"block.mubble.oak_leaf_pile": "Eikenbladeren hoop",
 	"block.mubble.spruce_leaf_pile": "Sparrebladeren hoop",
@@ -745,7 +745,7 @@
 	"block.mubble.unstable_stone": "Unstabiel steen",
 	"block.mubble.fluid_tank": "Vloeistoftank",
 	"block.mubble.placer": "Plaatser",
-	"block.mubble.timeswap_table": "Tijdwisselstaftel",
+	"block.mubble.timeswap_table": "Tijdwisselstafel",
 
 	"block.mubble.dandelion_pile": "Paardenbloemen hoop",
 	"block.mubble.poppy_pile": "Klaproozen hoop",
@@ -775,29 +775,29 @@
 	"block.mubble.permafrost_bismuth_ore": "Permafrost bismutherts",
 	"block.mubble.frozen_obsidian": "Bevroren obsidiaan",
 
-	"//block.mubble.amaranth_dylium": "Amaranth Dylium",
-	"//block.mubble.amaranth_roots": "Amaranth Roots",
-	"//block.mubble.amaranth_wart_block": "Amaranth Wart Block",
+	"block.mubble.amaranth_dylium": "Amarant dylium",
+	"block.mubble.amaranth_roots": "Amarant wortels",
+	"block.mubble.amaranth_wart_block": "Amarant kruidblok",
 
-	"//block.mubble.dark_amaranth_planks": "Dark Amaranth Planks",
-	"//block.mubble.dark_amaranth_fungus": "Dark Amaranth Fungus",
-	"//block.mubble.dark_amaranth_stem": "Dark Amaranth Stem",
-	"//block.mubble.stripped_dark_amaranth_stem": "Stripped Dark Amaranth Stem",
-	"//block.mubble.dark_amaranth_hyphae": "Dark Amaranth Hyphae",
-	"//block.mubble.stripped_dark_amaranth_hyphae": "Stripped Dark Amaranth Hyphae",
-	"//block.mubble.dark_amaranth_pressure_plate": "Dark Amaranth Pressure Plate",
-	"//block.mubble.dark_amaranth_trapdoor": "Dark Amaranth Trapdoor",
-	"//block.mubble.dark_amaranth_button": "Dark Amaranth Button",
-	"//block.mubble.dark_amaranth_stairs": "Dark Amaranth Stairs",
-	"//block.mubble.dark_amaranth_slab": "Dark Amaranth Slab",
-	"//block.mubble.dark_amaranth_vertical_slab": "Dark Amaranth Vertical Slab",
-	"//block.mubble.dark_amaranth_fence_gate": "Dark Amaranth Fence Gate",
-	"//block.mubble.dark_amaranth_fence": "Dark Amaranth Fence",
-	"//block.mubble.dark_amaranth_door": "Dark Amaranth Door",
-	"//block.mubble.dark_amaranth_hyphae_stairs": "Dark Amaranth Hyphae Stairs",
-	"//block.mubble.dark_amaranth_hyphae_slab": "Dark Amaranth Hyphae Slab",
-	"//block.mubble.dark_amaranth_hyphae_vertical_slab": "Dark Amaranth Hyphae Vertical Slab",
-	"//block.mubble.dark_amaranth_hyphae_button": "Dark Amaranth Hyphae Button",
+	"block.mubble.dark_amaranth_planks": "Donkereamarant houten planken",
+	"block.mubble.dark_amaranth_fungus": "Donkereamarant zwam",
+	"block.mubble.dark_amaranth_stem": "Donkereamarant stam",
+	"block.mubble.stripped_dark_amaranth_stem": "Gestripte donkereamarant stam",
+	"block.mubble.dark_amaranth_hyphae": "Donkereamarant schimmeldraad",
+	"block.mubble.stripped_dark_amaranth_hyphae": "Gestripte donkereamarant schimmeldraad",
+	"block.mubble.dark_amaranth_pressure_plate": "Donkereamarant houten drukplaat",
+	"block.mubble.dark_amaranth_trapdoor": "Donkereamarant houten valluik",
+	"block.mubble.dark_amaranth_button": "Donkereamarant houten knop",
+	"block.mubble.dark_amaranth_stairs": "Donkereamarant houten trap",
+	"block.mubble.dark_amaranth_slab": "Donkereamarant houten plaat",
+	"block.mubble.dark_amaranth_vertical_slab": "Donkereamarant houten plaat verticaal",
+	"block.mubble.dark_amaranth_fence_gate": "Donkereamarant houten poort",
+	"block.mubble.dark_amaranth_fence": "Donkereamarant houten hek",
+	"block.mubble.dark_amaranth_door": "Donkereamarant houten deur",
+	"block.mubble.dark_amaranth_hyphae_stairs": "Donkereamarant schimmeldraad trap",
+	"block.mubble.dark_amaranth_hyphae_slab": "Donkereamarant schimmeldraad plaat",
+	"block.mubble.dark_amaranth_hyphae_vertical_slab": "Donkereamarant schimmeldraad plaat verticaal",
+	"block.mubble.dark_amaranth_hyphae_button": "Donkereamarant schimmeldraad knop",
 
 	"block.mubble.smb_question_block": "?-blok (SMB)",
 	"block.mubble.smb3_question_block": "?-blok (SMB3)",
@@ -1259,29 +1259,29 @@
 	"entity.mubble.chincho": "Chincho",
 	"entity.mubble.goomba": "Goomba",
 	"entity.mubble.toad": "Toad",
-	"//entity.mubble.toad.species.white": "White Toad",
-	"//entity.mubble.toad.species.light_gray": "Light Gray Toad",
-	"//entity.mubble.toad.species.gray": "Gray Toad",
-	"//entity.mubble.toad.species.black": "Black Toad",
-	"//entity.mubble.toad.species.brown": "Brown Toad",
-	"//entity.mubble.toad.species.red": "Red Toad",
-	"//entity.mubble.toad.species.orange": "Orange Toad",
-	"//entity.mubble.toad.species.yellow": "Yellow Toad",
-	"//entity.mubble.toad.species.lime": "Lime Toad",
-	"//entity.mubble.toad.species.green": "Green Toad",
-	"//entity.mubble.toad.species.cyan": "Cyan Toad",
-	"//entity.mubble.toad.species.light_blue": "Ligh Blue Toad",
-	"//entity.mubble.toad.species.blue": "Blue Toad",
-	"//entity.mubble.toad.species.purple": "Purple Toad",
-	"//entity.mubble.toad.species.magenta": "Magenta Toad",
-	"//entity.mubble.toad.species.pink": "Pink Toad",
-	"//entity.mubble.toad.brigade.captain_toad": "Captain Toad",
-	"//entity.mubble.toad.brigade.hint_toad": "Hint Toad",
-	"//entity.mubble.toad.brigade.banktoad": "Banktoad",
-	"//entity.mubble.toad.brigade.yellow": "Yellow Toad",
-	"//entity.mubble.toad.brigade.mailtoad": "Mailtoad",
-	"//entity.mubble.toad.party": "Party Toad",
-	"//entity.mubble.toad.kisekae": "Kisekae Toad",
+	"entity.mubble.toad.species.white": "Witte Toad",
+	"entity.mubble.toad.species.light_gray": "Lichtgrijze Toad",
+	"entity.mubble.toad.species.gray": "Grijze Toad",
+	"entity.mubble.toad.species.black": "Zwarte Toad",
+	"entity.mubble.toad.species.brown": "Bruine Toad",
+	"entity.mubble.toad.species.red": "Rode Toad",
+	"entity.mubble.toad.species.orange": "Orange Toad",
+	"entity.mubble.toad.species.yellow": "Gele Toad",
+	"entity.mubble.toad.species.lime": "Lichtgroene Toad",
+	"entity.mubble.toad.species.green": "Groene Toad",
+	"entity.mubble.toad.species.cyan": "Turquoise Toad",
+	"entity.mubble.toad.species.light_blue": "Lichtblauwe Toad",
+	"entity.mubble.toad.species.blue": "Blauwe Toad",
+	"entity.mubble.toad.species.purple": "Paarse Toad",
+	"entity.mubble.toad.species.magenta": "Magenta Toad",
+	"entity.mubble.toad.species.pink": "Roze Toad",
+	"entity.mubble.toad.brigade.captain_toad": "Kapitein Toad",
+	"entity.mubble.toad.brigade.hint_toad": "Hint Toad",
+	"entity.mubble.toad.brigade.banktoad": "Banktoad",
+	"entity.mubble.toad.brigade.yellow": "Gele Toad",
+	"entity.mubble.toad.brigade.mailtoad": "Posttoad",
+	"entity.mubble.toad.party": "Feest Toad",
+	"entity.mubble.toad.kisekae": "Kisekae Toad",
 	"entity.mubble.fireball": "Vuurbal",
 	"entity.mubble.iceball": "IJsbal",
 	"entity.mubble.kirby_ball": "Kirby bal",
@@ -1299,8 +1299,8 @@
 	"biome.mubble.tritanopian_gallery": "Tritanopische galerij",
 	"biome.mubble.achromatopsian_gallery": "Achromatopsian galerij",
 	"biome.mubble.protanopian_gallery": "Protanopishe galerij",
-	"//biome.mubble.dark_amaranth_forest": "Dark Amaranth Forest",
-	"//biome.mubble.tall_dark_amaranth_forest": "Tall Dark Amaranth Forest",
+	"biome.mubble.dark_amaranth_forest": "Donkeramarant bos",
+	"biome.mubble.tall_dark_amaranth_forest": "Hoog donkereamarant bos",
 	"biome.mubble.press_garden": "Perstuin",
 	"biome.mubble.scarlet_forest": "Scharlake bos",
 
@@ -1359,10 +1359,10 @@
 	"advancements.mubble.get_tetris_block.description": "Krijg je handen aan een Tetris blok",
 
 	"comment": "STATS",
-	"//stat.mubble.inspect_placer": "Placers Searched",
-	"//stat.mubble.interact_with_timeswap_table": "Interactions with Timeswap Table",
-	"//stat.mubble.open_present": "Presents Opened",
-	"//stat.mubble.talked_to_toad": "Talked to Toads",
+	"stat.mubble.inspect_placer": "Plaaatsers doorzocht",
+	"stat.mubble.interact_with_timeswap_table": "Interacties met tijdwisselstafel",
+	"stat.mubble.open_present": "Cadeaus geopend",
+	"stat.mubble.talked_to_toad": "Met Toads gepraat",
 
 	"comment": "COMMANDS",
 	"commands.foodbar.add.food.success.single": "Heb %s voetselpunt(en) toegevoegd aan %s",
