--- a/src/main/resources/assets/mubble/lang/lol_us.json
+++ b/src/main/resources/assets/mubble/lang/lol_us.json
@@ -1270,7 +1270,7 @@
 	"//entity.mubble.toad.species.lime": "Lime Toad",
 	"//entity.mubble.toad.species.green": "Green Toad",
 	"//entity.mubble.toad.species.cyan": "Cyan Toad",
-	"//entity.mubble.toad.species.light_blue": "Ligh Blue Toad",
+	"//entity.mubble.toad.species.light_blue": "Light Blue Toad",
 	"//entity.mubble.toad.species.blue": "Blue Toad",
 	"//entity.mubble.toad.species.purple": "Purple Toad",
 	"//entity.mubble.toad.species.magenta": "Magenta Toad",
