--- a/src/main/resources/assets/mubble/lang/de_de.json
+++ b/src/main/resources/assets/mubble/lang/de_de.json
@@ -47,7 +47,6 @@
 	"block.mubble.gray_cloud_block": "Grauer Wolkenblock",
 	"block.mubble.black_cloud_block": "Schwarzer Wolkenblock",
 
-	"block.mubble.cheese_block": "Käseblock",
 	"block.mubble.chocolate_cake": "Schokoladenkuchen",
 	"block.mubble.minecraft_10th_anniversary_cake": "Minecrafts Torte zum 10-jährigen Jubiläum",
 
@@ -69,21 +68,8 @@
 	"block.mubble.black_balloon": "Schwarzer Luftballon",
 
 	"block.mubble.unstable_stone": "Instabiler Stein",
-	"block.mubble.fluid_tank": "Flüssigkeitsbehälter",
 	"block.mubble.placer": "Platzierer",
 	"block.mubble.timeswap_table": "Zeitvertauschungstisch",
-
-	"block.mubble.permarock": "Permastein",
-	"block.mubble.permafrost_bricks": "Permafrostziegelsteine",
-	"block.mubble.permafrost_brick_stairs": "Permafrostziegeltreppe",
-	"block.mubble.permafrost_brick_slab": "Permafrostziegelstufe",
-	"block.mubble.permafrost_brick_fence": "Permafrostziegelzaun",
-	"block.mubble.blue_permafrost_bricks": "Blauer Permafrostziegelstein",
-	"block.mubble.blue_permafrost_brick_stairs": "Blaue Permafrostziegeltreppe",
-	"block.mubble.blue_permafrost_brick_slab": "Blaue Permafrostziegelstufe",
-	"block.mubble.blue_permafrost_brick_wall": "Blauer Permafrostziegelzaun",
-	"block.mubble.permafrost_bismuth_ore": "Permafrost-Bismuterz",
-	"block.mubble.frozen_obsidian": "Vereister Obsidian",
 
 	"block.mubble.smb_question_block": "?-Block (SMB)",
 	"block.mubble.smb3_question_block": "?-Block (SMB3)",
@@ -338,17 +324,7 @@
 
 	"comment": "ITEMS",
 	"item.mubble.baguette": "Stangenweißbrot",
-	"item.mubble.bismuth_dust": "Bismutstaub",
-	"item.mubble.crystallized_bismuth": "Kristallisiertes Bismut",
-	"item.mubble.bismuth_sword": "Bismutschwert",
-	"item.mubble.bismuth_shovel": "Bismutschaufel",
-	"item.mubble.bismuth_pickaxe": "Bismutspitzhacke",
-	"item.mubble.bismuth_axe": "Bismutaxt",
-	"item.mubble.bismuth_hoe": "Bismuthacke",
-	"item.mubble.diamond_stick": "Diamoantstab",
-	"item.mubble.permafrost_brick": "Permafrostziegel",
 	"item.mubble.bandage": "Verband",
-	"item.mubble.wheat_flour": "Weizenmehl",
 	"item.mubble.caramel_cube": "Karamellwürfel",
 	"item.mubble.crepe": "Krepp",
 	"item.mubble.sugar_crepe": "Zuckerkrepp",
@@ -357,7 +333,6 @@
 	"item.mubble.honey_crepe": "Honigkrepp",
 	"item.mubble.sweet_berry_crepe": "Süßbeerenkrepp",
 	"item.mubble.candy_cane": "Zuckerstange",
-	"item.mubble.cheese": "Käse",
 	"item.mubble.jingle_bells": "Klingelglocken",
 	"item.mubble.small_bulb": "Kleine Glühbirne",
 	"item.mubble.totem_of_ascending": "Totem des Aufsteigends",
@@ -557,5 +532,11 @@
 	"comment": "OTHER",
 	"item.mubble.bandana.secret_status": "Das ist für dich, §6Pixel§r!",
 	"item.mubble.noteblock_head.secret_status": "Hey! Ich dachte, du hättest das schon auf dem Kopf, §6Evan§r!",
-	"item.mubble.mayro_cap.secret_status": "Komm schon, du bist der jenige der es am wenigsten braucht. Bist du nicht \"§6Sossie§r\"?"
+	"item.mubble.mayro_cap.secret_status": "Komm schon, du bist der jenige der es am wenigsten braucht. Bist du nicht \"§6Sossie§r\"?",
+
+	"comment": "CONFIG",
+	"//text.autoconfig.mubble.title": "Mubble Configuration",
+	"//text.autoconfig.mubble.category.biomes": "Biomes",
+	"//text.autoconfig.mubble.option.biomes.press_garden": "Generate Press Gardens",
+	"//text.autoconfig.mubble.option.biomes.scarlet_forest": "Generate Scarlet Forests"
 }
